fix: introduction title size reduced to stop it from overflowing

--- a/src/sass/layouts/_homepage.scss
+++ b/src/sass/layouts/_homepage.scss
@@ -90,17 +90,17 @@
 .intro-title {
   color: var(--clr-neutral-300);
   line-height: 18vh;
-  font-size: 22vh;
+  font-size: 17vh;
   
   @include max-mq(medium) {
-    font-size: 14vh;
+    font-size: 10vh;
   }
   
   @include max-mq(small) {
-    font-size: 9vh;
+    font-size: 7vh;
   }
   @include max-mq(extra-small) {
-    font-size: 6vh;
+    font-size: 5vh;
   }
 }
 
